--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "react-dom": "^15.4.0",
     "react-router": "^3.0.0",
     "react-scripts": "0.7.0",
-    "react-tap-event-plugin": "^2.0.1"
+    "react-tap-event-plugin": "^2.0.1",
+    "underscore": "^1.8.3"
   },
   "scripts": {
     "start": "react-scripts start",
