--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "firebase": "^3.6.1",
+    "flux": "^3.1.2",
+    "immutable": "^3.8.1",
     "material-ui": "^0.16.2",
     "react": "^15.4.0",
     "react-dom": "^15.4.0",
